Fixed Views/CSS - Added min-height for product cards for alignment - Fixed History layout to accomodate GUID

--- a/WebApp_ShoppingCart/wwwroot/css/site.css
+++ b/WebApp_ShoppingCart/wwwroot/css/site.css
@@ -44,6 +44,7 @@ span.badge {
     display: -webkit-box;
     -webkit-line-clamp: 3;
     line-clamp: 3;
+    min-height: 4.5rem;
     -webkit-box-orient: vertical;
 }
 
@@ -105,7 +106,7 @@ span.badge {
 
 #body-cart .product-details, #body-history .product-details {
     width: 100%;
-    font-size: 1.2em;
+    font-size: 1.1em;
 }
 
 #body-cart .product-details > .row, #body-history .product-details > .row {
